Fix bullet line height to align center.

--- a/styles/content/typography/lists/variables.less
+++ b/styles/content/typography/lists/variables.less
@@ -265,7 +265,7 @@
 @list-item-bullet-line-height: 16px * 1.4;
 @list-item-bullet-line-height-screen-small: null;
 @list-item-bullet-line-height-screen-medium: floor(1.05 * @list-item-bullet-line-height);
-@list-item-bullet-line-height-screen-large: floor(1.1 * @list-item-bullet-line-height);
+@list-item-bullet-line-height-screen-large: floor(0.9 * @list-item-bullet-line-height);
 @list-item-bullet-line-height-screen-jumbo: null;
 
 /*
